# pyspark-deploy

./: .gitignore  Makefile  Pipfile  README.md  TODO.md  Taskfile.yaml  ansible.cfg  cloud-config.yaml  cluster  cluster.py  cluster.sh  cluster.yml.changeme  create  create.sh  deploy.yml  destroy  destroy.sh  inventory.tpl  log4j.properties  login  login.sh  main.tf  pyproject.toml  pyspark_deploy.py  pyspark_deploy2.py  setup.sh  spark-defaults.conf.tftpl  spark-env.sh.tftpl  variables.tf  web-admin  web-admin.sh  web-ui.sh
ansible/: .gitignore  ansible.cfg  bake-ami.yml  build-ami.yml  cluster-down.yml  cluster-up.yml  create.yml  deploy.yml  destroy.yml  docker-ami.yml  spark-cluster.yml
ansible/config/: local.yml.changeme
ansible/terraform/: .gitignore
ansible2/: ansible.cfg  deploy.yml  pyproject.toml
ansible2/terraform/: main.tf  variables.tf
base_image/: Dockerfile
cluster/: cluster.tf  inventory.tpl  vpc.tf
config/: .gitignore  local.ansible.yml.changeme
config/ansible/: local.yml.changeme
docker/: Dockerfile  spark-defaults.conf
group_vars/all/: local.yml.changeme
image/: Dockerfile  docker-compose.yml  spark-env.sh
templates/: cloud-config.yaml  docker-bash.sh  inventory  log4j.properties  spark-defaults.conf  spark-env.sh  start-spark.sh
terraform/: .gitignore  TODO.md  ansible.cfg  cloud-init.yml  cluster.tf  config.auto.tfvars.changeme  create.sh  deploy.yml  inventory.tpl  local.yml.changeme  main.tf  spark-defaults.conf.tpl  spark-env.sh.tpl  start-master.sh  start-master.sh.tpl  start_container.yml  user-data.yml  variables.tf  web-ui.sh
(+79 files in other folders)
