[tool.poetry]
name = "pyspark-deploy"
version = "0.1.0"
description = ""
authors = ["David McClure <davidwilliammcclure@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.29.0"
ansible = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
