[tool.poetry]
name = "pyspark-deploy"
version = "0.1.0"
description = ""
authors = ["David McClure <davidwilliammcclure@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^5.1.0"
pydantic = "^1.8.2"
click = "^8.0.3"
ipython = "^7.30.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
