[tool.poetry]
name = "pyspark-deploy"
version = "0.1.0"
description = ""
authors = ["David McClure <davidwilliammcclure@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.9.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
